@W-18168266 fix: modal close button focus contrast fix (#5514)
* fix: modal close button focus contrast fix

* fix: accessibility and update release notes

* doc: release note update

---------

--- a/ui/components/modals/base/_index.scss
+++ b/ui/components/modals/base/_index.scss
@@ -211,6 +211,12 @@
   &.slds-icon-utility-close, .slds-icon-utility-close {
     --slds-c-icon-color-foreground: var(--slds-g-color-neutral-base-50,#747474);
   }
+
+  &:focus,
+  &:focus-visible {
+    box-shadow: var(--slds-g-shadow-inset-inverse-focus-1);
+    outline: 0;
+  }
 }
 
 @mixin backdrop {
